# worldgen

./: .gitignore  AGENTS.md  README.md  main.py  np.sdf  prompt.md  pyproject.toml
.github/workflows/: nav-benchmark.yml
configs/: default.yaml
demo/: README.md  orchestrate.py
demo/config/: fastdds_localhost.xml
demo/configs/: turtlebot_nav.yaml
demo/launch/: trial.launch.py
demo/scripts/: augment_world.py  benchmark_runner.py  make_profiles.py  ros_env.sh
outputs/: .gitkeep
random_gazebo_world/: __init__.py  adjacency.py  cli.py  config.py  export_map.py  export_sdf.py  geometry.py  metadata.py  openings.py  partition.py  passage_geometry.py  pipeline.py  rng.py  solid_geometry.py  test_runner.py  topology.py  visualize.py  voronoi.py  walls.py
tests/: test_adjacency.py  test_applied_layout.py  test_candidate_connections.py  test_cli.py  test_config.py  test_connectivity.py  test_constrained_selection.py  test_export_map.py  test_export_sdf.py  test_geometry.py  test_metadata.py  test_openings.py  test_partition.py  test_passage_constraints.py  test_passage_geometry.py  test_room_graph_selection.py  test_room_selection.py  test_voronoi.py  test_walls.py
