[project]
name = "random-gazebo-world"
version = "0.1.0"
description = "Procedural Gazebo world generator for flat indoor rectangular-room layouts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "pillow",
    "pyyaml",
    "pytest",
    "shapely",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["random_gazebo_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
worldgen-test = "random_gazebo_world.test_runner:main"
